--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/login.png" class="logo" alt="Logo">
+                <img src="login.png" class="logo" alt="Logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/that.png">
+                <img src="that.png">
             </div>
             <div class="about-col-2">
                <h1 class="subtitle">About Me</h1>
@@ -94,7 +94,7 @@ and offered through Coursera .</li>
           <a href=""><i class="fab fa-instagram"></i></a>
           <a href=""><i class="fab fa-linkedin"></i></a>
         </div>
-        <a href="images/my-cv.pdf" download class="btn btn-rectangular">Download CV</a>
+        <a href="my-cv.pdf" download class="btn btn-rectangular">Download CV</a>
       </div>
     </div>
   </div>
