--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ and offered through Coursera .</li>
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact Me</h1>
-        <p><i class="fas fa-paper-plane"></i> contact@example.coms</p>
-        <p><i class="fas fa-phone-square-alt"></i> 0123456789</p>
+        <p><i class="fas fa-paper-plane"></i> anandhakrishnanalpy@gmail.com</p>
+        <p><i class="fas fa-phone-square-alt"></i> 7356218038</p>
         <div class="social-icons">
           <a href=""><i class="fab fa-facebook"></i></a>
           <a href=""><i class="fab fa-twitter-square"></i></a>
