--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ and offered through Coursera .</li>
         <p><i class="fas fa-paper-plane"></i> anandhakrishnanalpy@gmail.com</p>
         <p><i class="fas fa-phone-square-alt"></i> 7356218038</p>
         <div class="social-icons">
-          <a href=""><i class="fab fa-facebook"></i></a>
-          <a href=""><i class="fab fa-twitter-square"></i></a>
-          <a href=""><i class="fab fa-instagram"></i></a>
-          <a href=""><i class="fab fa-linkedin"></i></a>
+          <a href="https://m.facebook.com/Anandhuzz"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/An_and_h"><i class="fab fa-twitter-square"></i></a>
+          <a href="https://www.instagram.com/_.an._.and._/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/anandha-krishnan-s-61394a275/"><i class="fab fa-linkedin"></i></a>
         </div>
         <a href="my-cv.pdf" download class="btn btn-rectangular">Download CV</a>
       </div>
