--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ and offered through Coursera .</li>
           <a href="https://www.instagram.com/_.an._.and._/"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/anandha-krishnan-s-61394a275/"><i class="fab fa-linkedin"></i></a>
         </div>
-        <a href="my-cv.pdf" download class="btn btn-rectangular">Download CV</a>
+        <a href="my-cv1.pdf" download class="btn btn-rectangular">Download CV</a>
       </div>
     </div>
   </div>
