--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <li><a href="#contact">Contact</a></li>
                     <li><i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i></li>
                 </ul>
-                <div id="menu-icon-container">
-                  <i class="fa-solid fa-globe" onclick="openmenu()"></i>
-                </div>
+                <div id="menu-icon-container" class="top-right">
+                    <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+                  </div>
                 
             </nav>
 <div class="header-text">
